--- a/src/app/shutter-fly/shutter-fly.component.scss
+++ b/src/app/shutter-fly/shutter-fly.component.scss
@@ -67,7 +67,7 @@
   }
 
   .container {
-    width: 1800px;
+    // width: 1800px;
     margin: auto;
     min-height: 100%;
     overflow: auto;
